# glurp

./: CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
docs/source/: conf.py  index.rst  introduction.rst  requirements.txt  user_guide.rst
src/glurp/: __init__.py
tests/: conftest.py  test_translate.py
